Fix ResultsAny height/stretch.

--- a/components/ResultsList.scss
+++ b/components/ResultsList.scss
@@ -21,6 +21,7 @@ a {
 .resultsAny {
 	padding: 15px;
 	background: rgb(248, 248, 248); // Match DevOps
+	height: 100%;
 }
 
 .resultsList {
